--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@1,100&family=Sofia+Sans+Condensed:wght@100&family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap');
+    </style>
 </head>
 <body>
   <app-root></app-root>
